--- a/index.html
+++ b/index.html
@@ -33,28 +33,28 @@
                         <button type="button" >Contact Me</button>
                     </article>
                     <aside>
-                        <p class="photo"><img src="img/open-removebg-preview.png" alt=""></p>
+                        <p class="photo"><img src="open-removebg-preview.png" alt=""></p>
                     </aside>
                 </section>
             </div>
             <div id="bloc_3">
                 <div>
                     <figure>
-                        <img src="img/branding.png" alt="Branding Design Image">
+                        <img src="branding.png" alt="Branding Design Image">
                         <h2>Brand Design</h2>
                         <figcaption></figcaption>
                     </figure>
                 </div>
                 <div>
                     <figure>
-                        <img src="img/seo.jpg" alt="Seo & Marketingw">
+                        <img src="seo.jpg" alt="Seo & Marketingw">
                         <h2>Seo&Marketing</h2>
                         <figcaption></figcaption>
                     </figure>
                 </div>
                 <div>
                     <figure>
-                        <img src="img/creative.png" alt="Creative Design Image">
+                        <img src="creative.png" alt="Creative Design Image">
                         <h2>Creative Design</h2>
                         <figcaption></figcaption>
                     </figure>
