--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <button type="button" >Contact Me</button>
                     </article>
                     <aside>
-                        <p class="photo"><img src="open-removebg-preview.png" alt=""></p>
+                        <p class="photo"><img src="./open-removebg-preview.png" alt=""></p>
                     </aside>
                 </section>
             </div>
